--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mix+ | Pedido de Conteúdo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&display=swap');
     body {
@@ -15,7 +15,7 @@
       color: #fff;
     }
     .form-container {
-      background-color: rgba(0, 0, 0, 0.65);
+      background-color: rgba(0, 0, 0, 0.6);
       max-width: 720px;
       margin: 20px auto;
       padding: 30px 35px;
@@ -68,7 +68,7 @@
       background-color: #c62828;
     }
     .intro-text {
-      background-color: rgba(255, 255, 255, 0.12);
+      background-color: rgba(255, 255, 255, 0.25);
       border: 2px solid #ffffff;
       padding: 24px;
       border-radius: 16px;
@@ -93,21 +93,41 @@
     .justwatch-link a:hover {
       text-decoration: underline;
     }
+
     .consulta-btn {
-      background-color: #4caf50;
+      margin-top: 20px;
       text-align: center;
-      margin-top: 25px;
+    }
+
+    .consulta-btn a {
+      background-color: #4fc3f7;
+      color: #000;
+      padding: 12px 20px;
+      border-radius: 10px;
+      font-weight: bold;
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    @media (max-width: 480px) {
+      .form-container {
+        margin: 10px;
+        padding: 20px;
+      }
+      h2 {
+        font-size: 24px;
+      }
     }
   </style>
 </head>
 <body>
   <div class="form-container">
     <div class="header-logo">
-      <img src="https://i.ibb.co/nNByyyd6/logo-mixplus.png" alt="Logo Mix+">
+      <img src="https://i.ibb.co/nNByyyd6/logo-mixplus.png" alt="Logo Mix+ IA">
     </div>
 
     <div class="intro-text">
-      Solicite qualquer conteúdo disponível em plataformas de streaming. <br>
+      Solicite qualquer conteúdo disponível em plataformas de streaming.<br>
       Verifique no <strong>JustWatch</strong> se o conteúdo está <strong>disponível para streaming</strong>.<br>
       Se constar como <em>não disponível</em>, o pedido será descartado.
     </div>
@@ -115,12 +135,10 @@
     <h2>PEDIDO DE CONTEÚDO</h2>
 
     <div class="justwatch-link">
-      🔎 <a href="https://www.justwatch.com/br" target="_blank">Verificar disponibilidade no JustWatch</a>
+      🔎 <a href="https://www.justwatch.com/br" target="_blank">Verifique a disponibilidade no JustWatch</a>
     </div>
 
-    <form id="formulario">
-      <input type="hidden" id="datahora" name="datahora">
-
+    <form method="POST" action="https://script.google.com/macros/s/AKfycbzsVukm7SS_nFhJAoVai7-DllcTRfunov2OxqX3cmCsVrJ6LzZoBWfdYEONIkqOrYba/exec">
       <label for="usuario">Nome do Usuário</label>
       <input type="text" id="usuario" name="usuario" required>
 
@@ -139,7 +157,7 @@
         <option value="filme">Filme</option>
         <option value="novela">Novela</option>
         <option value="anime">Anime</option>
-        <option value="documentario">Documentário</option>
+        <option value="documentário">Documentário</option>
       </select>
 
       <label for="episodio">Episódio ou Temporada</label>
@@ -152,45 +170,8 @@
     </form>
 
     <div class="consulta-btn">
-      <a href="consulta.html">
-        <button style="background:#4caf50; margin-top:15px;">🔍 Consultar meus pedidos</button>
-      </a>
+      <a href="consulta.html">📋 Consultar Análise do Pedido</a>
     </div>
   </div>
-
-  <script>
-    document.getElementById("formulario").addEventListener("submit", function(e) {
-      e.preventDefault();
-
-      const dados = {
-        usuario: document.getElementById("usuario").value,
-        numero: document.getElementById("numero").value,
-        whatsapp: document.getElementById("whatsapp").value,
-        titulo: document.getElementById("titulo").value,
-        tipo: document.getElementById("tipo").value,
-        episodio: document.getElementById("episodio").value,
-        link: document.getElementById("link").value,
-      };
-
-      const form = new FormData();
-      for (const key in dados) {
-        form.append(key, dados[key]);
-      }
-
-      fetch("https://script.google.com/macros/s/AKfycbxHBl9LcMrBR4MFjQXR1H_B6FifMH_EP-0F4Vd0cCtjQ4-gpmLlZ4_WZ7Y8ws1xA_aA/exec", {
-        method: "POST",
-        body: form
-      })
-      .then(() => {
-        window.location.href = "obrigado.html";
-      })
-      .catch(error => {
-        alert("❌ Erro ao enviar: " + error.message);
-      });
-    });
-
-    // Preencher automaticamente a data e hora no campo oculto (se usar no futuro)
-    document.getElementById("datahora").value = new Date().toLocaleString("pt-BR");
-  </script>
 </body>
 </html>
