--- a/index.html
+++ b/index.html
@@ -93,12 +93,10 @@
     .justwatch-link a:hover {
       text-decoration: underline;
     }
-
     .consulta-btn {
       margin-top: 20px;
       text-align: center;
     }
-
     .consulta-btn a {
       background-color: #4fc3f7;
       color: #000;
@@ -108,8 +106,11 @@
       text-decoration: none;
       display: inline-block;
     }
-
-    @media (max-width: 480px) {
+    @media (max-width: 768px) {
+      body {
+        background-color: #000 !important;
+        background-image: none !important;
+      }
       .form-container {
         margin: 10px;
         padding: 20px;
@@ -138,7 +139,7 @@
       🔎 <a href="https://www.justwatch.com/br" target="_blank">Verifique a disponibilidade no JustWatch</a>
     </div>
 
-    <form method="POST" action="https://script.google.com/macros/s/AKfycbzsVukm7SS_nFhJAoVai7-DllcTRfunov2OxqX3cmCsVrJ6LzZoBWfdYEONIkqOrYba/exec">
+    <form method="POST" action="https://script.google.com/macros/s/AKfycbxHBl9LcMrBR4MFjQXR1H_B6FifMH_EP-0F4Vd0cCtjQ4-gpmLlZ4_WZ7Y8ws1xA_aA/exec">
       <label for="usuario">Nome do Usuário</label>
       <input type="text" id="usuario" name="usuario" required>
 
