--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;600;700&display=swap');
+
     body {
       margin: 0;
       padding: 0;
-      background: #000 url('https://i.ibb.co/Pv38qQC8/ab4a6693-3ad5-4913-be49-b6d41d0bc4c6.png') no-repeat center top fixed;
+      background: #000 url('https://i.ibb.co/RTgPpfdf/A-collage-of-four-moody-cinematic-scenes-in-dark.png') no-repeat center top fixed;
       background-size: cover;
       font-family: 'Barlow Condensed', sans-serif;
       color: #fff;
     }
+
     .form-container {
       background-color: rgba(0, 0, 0, 0.6);
       max-width: 720px;
@@ -22,13 +24,16 @@
       border-radius: 20px;
       box-shadow: 0 0 30px rgba(0,0,0,0.8);
     }
+
     .header-logo {
       text-align: center;
       margin-bottom: 10px;
     }
+
     .header-logo img {
       width: 220px;
     }
+
     h2 {
       text-align: center;
       font-size: 30px;
@@ -38,12 +43,14 @@
       text-transform: uppercase;
       letter-spacing: 1px;
     }
+
     label {
       display: block;
       margin: 16px 0 6px;
       font-size: 17px;
       font-weight: 600;
     }
+
     input, select {
       width: 100%;
       padding: 12px;
@@ -52,6 +59,7 @@
       margin-bottom: 8px;
       font-size: 16px;
     }
+
     button {
       background-color: #e53935;
       color: white;
@@ -64,9 +72,11 @@
       cursor: pointer;
       margin-top: 15px;
     }
+
     button:hover {
       background-color: #c62828;
     }
+
     .intro-text {
       background-color: rgba(255, 255, 255, 0.25);
       border: 2px solid #ffffff;
@@ -80,23 +90,28 @@
       color: #fff;
       box-shadow: 0 0 10px rgba(255,255,255,0.2);
     }
+
     .justwatch-link {
       text-align: center;
       margin-bottom: 20px;
       font-size: 17px;
     }
+
     .justwatch-link a {
       color: #4fc3f7;
       font-weight: bold;
       text-decoration: none;
     }
+
     .justwatch-link a:hover {
       text-decoration: underline;
     }
+
     .consulta-btn {
       margin-top: 20px;
       text-align: center;
     }
+
     .consulta-btn a {
       background-color: #4fc3f7;
       color: #000;
@@ -106,15 +121,19 @@
       text-decoration: none;
       display: inline-block;
     }
+
+    /* Mobile styles: remove background image, black bg */
     @media (max-width: 768px) {
       body {
         background-color: #000 !important;
         background-image: none !important;
       }
+
       .form-container {
         margin: 10px;
         padding: 20px;
       }
+
       h2 {
         font-size: 24px;
       }
